expression analyzer now supports mutliple expressions at once